--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="shortcut icon" href="{{url_for('static',filename='img/logo-productos.jpg')}}">
+
     <meta name="description" content="pagina web para ingra SOLUTIONS">
     <meta name="author" content="Alonso Cordova Sanchez">
 
     <title>AGROSECHURA</title>
-
-    <link rel="Shortcut Icon" type="image/x-icon" href="{{ url_for('static',filename='img/logo-productos.jpg') }}" />
-
     <!-- CSS only -->
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
