--- a/app/templates/admin/oficina.html
+++ b/app/templates/admin/oficina.html
@@ -57,7 +57,7 @@
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-outline-info mr-3 "
-                        onsubmit="cargando('Registrando Provincia!!')">Registrar</button>
+                        onclick="cargando('Registrando Oficina!!')">Registrar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
