--- a/app/templates/admin/usuario.html
+++ b/app/templates/admin/usuario.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="modal-footer">
                     
-                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " >Agregar</button>
+                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " onsubmit="cargando('Registrando Usuario!!')">Agregar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
