--- a/app/templates/macros/_guia.html
+++ b/app/templates/macros/_guia.html
@@ -32,7 +32,7 @@
             <div class="card border-dark">
                 <h5 class="text-center m-2">R.U.C. 20392464817</h5>
                 <div class="bg-primary ">
-                    <h5 class="m-2 text-center font-weight-bold">GUIA DE REMISION <br> REMITENTE</h5>
+                    <h5 class="m-2 text-center font-weight-bold text-black-50">GUIA DE REMISION <br> REMITENTE</h5>
                 </div>
                 <p class="m-2">00{{guia.oficina.id}} - <label class="text-danger">N° {{guia.id}}</label></p>
             </div>
