--- a/app/templates/user/perfil.html
+++ b/app/templates/user/perfil.html
@@ -11,7 +11,7 @@
                 {%endif%}
                 <br><br>
 
-                <a href="/editar-user" class="btn btn-outline-primary"> <i class="fas fa-edit"></i> Editar Perfil</a>
+                <a href="/edit-user" class="btn btn-outline-primary"> <i class="fas fa-edit"></i> Editar Perfil</a>
             </div>
             <div class="col-md">
                 <div class="row">
@@ -24,7 +24,7 @@
                 <div class="row">
                     
                     <div class="col">
-                        <h4><strong>{{usuario.persona.nombres}} {{usuario.persona.primer_apellido}} {{usuario.persona.segundo_apellido}}</strong></h4>
+                        <h4 class="text-uppercase"><strong>{{usuario.persona.nombres}} {{usuario.persona.primer_apellido}} {{usuario.persona.segundo_apellido}}</strong></h4>
                         <strong>DNI:</strong>  {{usuario.persona.dni}} <br>
                         <strong>Celular: </strong> {{usuario.persona.numero_celular}} <br>
                         <strong>Direccion:</strong>  {{usuario.persona.direccion}} - {{usuario.persona.distrito.nombre_distrito}} - {{usuario.persona.distrito.provincia.nombre_provincia}} - {{usuario.persona.distrito.provincia.departamento.nombre_departamento}} <br>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h4><strong>{{usuario.cargo.nombre_cargo}} </strong></h4>
+                        <h4 class="text-uppercase"><strong>{{usuario.cargo.nombre_cargo}} </strong></h4>
                         <p>Oficina: {{usuario.oficina.nombre_oficina}} <br>
                             Usuario: {{usuario.usuario}}
                         </p>
