--- a/app/templates/admin/cargo.html
+++ b/app/templates/admin/cargo.html
@@ -25,7 +25,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-outline-info mr-3 " onsubmit="cargando('Registrando Cargo!!')">Registrar</button>
+                    <button type="submit" class="btn btn-outline-info mr-3 " onclick="cargando('Registrando Cargo!!')">Registrar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
