--- a/app/templates/admin/persona.html
+++ b/app/templates/admin/persona.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="modal-footer">
 
-                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 ">Agregar</button>
+                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " onclick="cargando('Registrando Persona!!')">Agregar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
