--- a/app/templates/secretaria/cliente.html
+++ b/app/templates/secretaria/cliente.html
@@ -36,7 +36,7 @@
                         <td>{{cliente.direccion}}</td>
                         <td>
                             <button class="btn btn-warning " onclick="editarCliente({{cliente.id}})"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger " onclick="eliminarCliente({{cliente.id}})"><i class="fas fa-trash-alt"></i></button>
+                            <!--button class="btn btn-danger " onclick="eliminarCliente({{cliente.id}})"><i class="fas fa-trash-alt"></i></button-->
                         </td>
                     </tr>
                     {%endfor%}
@@ -97,7 +97,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 ">Registrar</button>
+                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " onclick="cargando('Registrando Cliente!!')">Registrar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
