--- a/app/templates/secretaria/transportista.html
+++ b/app/templates/secretaria/transportista.html
@@ -38,7 +38,7 @@
                         <td>{{transportista.numero_licencia}}</td>
                         <td>
                             <button class="btn btn-warning " onclick="editarTransportista({{transportista.id}})"><i class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger "  onclick="eliminarTransportista({{transportista.id}})"><i class="fas fa-trash-alt"></i></button>
+                            <!--button class="btn btn-danger "  onclick="eliminarTransportista({{transportista.id}})"><i class="fas fa-trash-alt"></i></button-->
                         </td>
                     </tr>
                     {%endfor%}
@@ -100,7 +100,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 ">Registrar</button>
+                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " onclick="cargando('Registrando Transportista!!')">Registrar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
