--- a/app/templates/secretaria/vehiculo.html
+++ b/app/templates/secretaria/vehiculo.html
@@ -36,8 +36,8 @@
                         <td>
                             <button class="btn btn-warning " onclick="editarVehiculo({{vehiculo.id}})"><i
                                     class="fas fa-edit"></i></button>
-                            <button class="btn btn-danger " onclick="eliminarVehiculo({{vehiculo.id}})"><i
-                                    class="fas fa-trash-alt"></i></button>
+                            <!--button class="btn btn-danger " onclick="eliminarVehiculo({{vehiculo.id}})"><i
+                                    class="fas fa-trash-alt"></i></button-->
                         </td>
                     </tr>
                     {%endfor%}
@@ -93,7 +93,7 @@
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 ">Registrar</button>
+                    <button type="submit" id="btn-guardar" class="btn btn-outline-info mr-3 " onclick="cargando('Registrando Vehiculo!!')">Registrar</button>
                     <button type="reset" class="btn btn-outline-danger">Limpiar</button>
                     <button class="btn btn-outline-secondary" type="button" data-dismiss="modal">Cancel</button>
                 </div>
