--- a/app/templates/secretaria/factura.html
+++ b/app/templates/secretaria/factura.html
@@ -42,7 +42,7 @@
                             {%else%}
                             <button class="btn btn-danger mb-2" onclick="eliminarFactura({{factura.id}})"><i class="fas fa-trash-alt"></i></button>
                             {%endif%}
-                            <a href="/guia/{{factura.id}}" class="btn btn-info mb-2"><i class="fas fa-wallet"></i> Guias</a>
+                            <a href="/guia/{{factura.id}}" class="btn btn-info mb-2"><i class="fas fa-wallet"></i> Guias {{factura.guias|length}}</a>
                         </td>
                     </tr>
                     {%endfor%}
