--- a/app/templates/login/register.html
+++ b/app/templates/login/register.html
@@ -5,10 +5,7 @@
     <div class="col-lg-6">
         <div class="p-5">
             <div class="text-center">
-                <h5 class="text-gray-900">Bienvenido a Agro Sechura SAC</h5>
-                <div class="card-img-bottom mb-2">
-                    <img src="{{ url_for('static',filename='img/logo-productos.jpg') }}" width="200" alt="icono">
-                </div>
+                <h5 class="text-gray-900">Registrate Agro Sechura SAC</h5>
             </div>
             <form class="user" method="POST" action="{{url_for('login.postLogin')}}">
                 <div class="form-group">
@@ -36,7 +33,7 @@
             </form>
             <hr>
             <div class="text-center m-1">
-                <a href="/register" class="btn-link">Registrarme</a> |
+                <a href="/" class="btn-link">Iniciar Sesion</a> |
                 <a href="/forgot-password" class="btn-link">Olvidé mi contraseña</a>
             </div>
         </div>
